[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://sprites/Enemies/enemyBlack4.png" type="Texture" id=2]
[ext_resource path="res://samples/hit.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 40.49

[sub_resource type="Animation" id=2]
resource_name = "Damage"
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("audioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Enemy" type="Area2D"]
script = ExtResource( 1 )
life = 4
points = 50

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="shootTimer" type="Timer" parent="."]
autostart = true

[node name="position2D" type="Position2D" parent="."]
position = Vector2( 0, 49.3891 )

[node name="timer" type="Timer" parent="."]
wait_time = 0.5

[node name="animationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/Damage = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="audioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
[connection signal="timeout" from="shootTimer" to="." method="_on_shootTimer_timeout"]
[connection signal="timeout" from="timer" to="." method="destroy"]
